xtask/fixtures/borrow/fail/reference_outlives_place.rs
// expect: E0597

fn main() {
    let reference: &String;

    {
        let value = String::from("short");
        reference = &value;
    }

    println!("{reference}");
}
